--- a/app.yaml
+++ b/app.yaml
@@ -14,5 +14,5 @@
 # [START fantasyncaaf_app_yaml]
 runtime: ruby25
 entrypoint: bundle exec rackup -p $PORT
-instsance_class: F2
+instance_class: F2
 # [END fantasyncaaf_app_yaml]
